Added queries to the food page

--- a/canteen_style.css
+++ b/canteen_style.css
@@ -58,10 +58,12 @@
 }
 
 .products{
-    grid-column-start: 1;
-    grid-column-end: 5;
+    grid-column-start: 2;
+    grid-column-end: 4;
     grid-row-start: 5;
     grid-row-end: 6;
+    font-size: 12px;
+    text-align: center;
 }
 
 .footer{
