--- a/canteen_style.css
+++ b/canteen_style.css
@@ -9,10 +9,15 @@
     grid-gap: 2px;
 }
 
+body{
+    background-color: #E66500;
+}
+
 .grid-item{
     border-style: solid;
     border-width: 5px;
-    border-color: blue;
+    border-color: black;
+    background-color: #FFF8DC;
 }
 
 .logo{
@@ -41,6 +46,7 @@
     grid-column-end: 5;
     grid-row-start: 2;
     grid-row-end: 3;
+    background-color: #FFF8DC;
 }
 
 .filters{
@@ -64,6 +70,7 @@
     grid-row-end: 6;
     font-size: 12px;
     text-align: center;
+    background-color: #FFFFFF;
 }
 
 .footer{
@@ -78,4 +85,9 @@
     grid-column-end: 4;
     grid-row-start: 3;
     grid-row-end: 6;
+}
+
+a{
+    background-color: #F5976C;
+    
 }
