--- a/canteen_style.css
+++ b/canteen_style.css
@@ -32,6 +32,7 @@ body{
     grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 2;
+    text-align: center;
 }
 
 .search{
@@ -39,6 +40,7 @@ body{
     grid-column-end: 5;
     grid-row-start: 1;
     grid-row-end: 2;
+
 }
 
 .navigation{
@@ -55,6 +57,7 @@ body{
     grid-column-end: 5;
     grid-row-start: 3;
     grid-row-end: 4;
+    text-align: center;
 }
 
 .product_page_heading{
@@ -112,4 +115,18 @@ a{
     text-decoration: none;
     border: 1px solid rgb(000,000,000);
 
+}
+
+input.button{
+    background-color: #F5976C;
+    color: black;
+    text-decoration: none;
+    border: 1px solid rgb(000,000,000);
+
+}
+
+.image{
+    background-color: transparent;
+    text-decoration: none;
+    border-color: transparent;
 }
